# webscraper-image-recognition-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: static-analysis.yml  unit-testing.yml
app/: log.py  main.py
app/crawlers/: base.py  images.py
app/ml/: base.py  images.py
app/models/: log.py
app/routers/: diagnostics.py  images.py
app/schemas/: diagnostics.py  images.py  ml.py
app/services/: images.py
tests/unit/: conftest.py  test_diagnostics.py  test_images.py
