[metadata]
name = Pharmacy
summary = A service that manages pharmacy data
description-file = README.md

[flake8]
max-line-length = 90
per-file-ignores = src/*/__init__.py:F401
ignore = E501,W503

[tool:pytest]
addopts = --cov=app/ --cov=tests/ --disable-pytest-warnings -vv --cov-report=term-missing --cov-report=html:cov_html
testpaths = tests

[isort]
profile=black
known_first_party=redflag
multi_line_output=3
line_length = 90
sections=STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
